Grundsätzliche Weiterentwicklungen. Modells, Controller, Views, CSS. Nichts aufregendes.

--- a/app/views/public/login.html.erb
+++ b/app/views/public/login.html.erb
@@ -1,1 +1,14 @@
-<h1></h1>Login
+<h1 id="login_logo">Login</h1>
+<form id="login_form">
+	<fieldset>
+		<legend>Einloggen</legend>
+		
+		<label for="login_email">Emailadresse: </label>
+		<input id="login_email" value="Deine Emailadresse" type="text" name="email" />
+		
+		<label for="login_password">Passwort: </label>
+		<input id="login_password" value="Passwort" type="password" name="password" />
+		
+		<button>Einloggen</button>
+	</fieldset>
+</form>
