--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Contact2</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
+<title>Contact2</title>
+<%= stylesheet_link_tag :all %>
+<%= javascript_include_tag :all %>
+<%= csrf_meta_tag %>
 </head>
 <body>
 
@@ -18,22 +18,43 @@
 		<!-- HEADER -->
 		<div id="header">
 			
+			<%
+				@menu = []
+				@menu << {:name => "people", :title => "Personen"}
+				@menu << {:name => "events", :title => "Events"}
+				@menu << {:name => "interactions", :title => "Interactions"}
+				@menu << {:name => "lists", :title => "Listen"}
+				@menu << {:name => "settings", :title => "Einstellungen"}
+				
+			%>
+			
 			<ul id="menu">
-				<li class="active"><span><a href="" style="background-image:url(/stylesheets/icons/16_people.png);">Personen</a></span></li>
-				<li><span><a href="" style="background-image:url(/stylesheets/icons/16_events.png);">Events</a></span></li>
-				<li><span><a href="" style="background-image:url(/stylesheets/icons/16_interactions.png);">Interactions</a></span></li>
-				<li><span><a href="" style="background-image:url(/stylesheets/icons/16_lists.png);">Listen</a></span></li>
-				<li><span><a href="" style="background-image:url(/stylesheets/icons/16_settings.png);">Einstellungen</a></span></li>
+				<% @menu.each do |m| %>
+					<li<% if current_controller?(m[:name]) %> class="active"<% end %>>
+						<span>
+							<a href="<%= url_for(:controller => m[:name]) %>" style="background-image:url(/stylesheets/icons/16_<%= m[:name] %>.png);"><%= m[:title] %></a>
+						</span>
+					</li>					
+				<% end %>
 			</ul><!-- menu ends here -->
+			
+			<!-- USERMENU -->
+			<p id="usermenu">
+				<img src="/img.gif" alt="" title="" />
+				Franz Wilding <br />
+				<strong><a href="<%= url_for(:controller => 'public', :action => 'logout') %>" title="Ausloggen">Logout</a></strong>
+				<a id="user_settings" title="Meine User-Einstellungen" href="<%= url_for(:controller => 'settings', :action => 'profile') %>">Settings</a>
+			</p><!-- usermenu ends here -->
 			
 		</div><!-- header ends here -->
 		
 		<!-- INNER -->
 		<div id="inner">
-		<%= yield %>
+			<%= yield %>
 		</div><!-- inner ends here -->
 		
-		<div id="content_footer"></div>
+
+		<p class="c"></p>
 	</div><!-- content ends here -->
 	
 	
@@ -42,7 +63,7 @@
 		<strong>Contact 2.0</strong>
 	</div><!-- footer ends here -->
 	
-	
+		
 </div><!-- mainarea ends here -->
 
 </body>
