--- a/app/views/interactions/edit.html.erb
+++ b/app/views/interactions/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing interaction</h1>
+<h1>Eine neue Interaction hinzufügen</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @interaction %> |
-<%= link_to 'Back', interactions_path %>
+<p class="metanav">
+	<%= link_to 'Zurück', interactions_path %>
+</p>
