--- a/app/views/interactions/new.html.erb
+++ b/app/views/interactions/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New interaction</h1>
+<h1>Neue Interaction</h1>
+
+<blockquote>Interactions sind soetwas wie Gedankenprotokolle. Sie speichern können genutzt werden, um zu speichern wer mit wem wann was gemacht hat. Zum Beispiel könne sie für Schultouren verwendet werden.</blockquote>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', interactions_path %>
+<p class="metanav">
+	<%= link_to 'Zurück', interactions_path %>
+</p>
