--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Person bearbeiten</h1>
+
 <p class="metanav">
-	<%= link_to 'Show', @person %> |
-	<%= link_to 'Back', people_path %>
+	<%= link_to 'Zurück', people_path %>
 </p>
 <%= render 'form' %>
