--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -1,1 +1,8 @@
 <h1>Settings</h1>
+
+<ul class="settings">
+	<li class="people"><a href="settings/peoplefields">Personenfelder</a></li>
+	<li class="interactions"><a href="">Interactions</a></li>
+	<li class="lists"><a href="">Listen</a></li>
+	<li class="permissions"><a href="">User-Rechte</a></li>
+</ul><!-- settings ends here -->
