--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,6 @@
 
 
 
-
 /******************/
 /* GENERAL STYLES */
 /******************/
@@ -19,88 +18,6 @@
 	display: none;
 	}
 
-form {
-	}
-
-fieldset {
-	border: none;
-	border-right:1px solid white;
-	border-bottom: 1px solid white;
-	background: url(img/op_black_10.png) left top;
-	border-radius: 5px;
-	float: left;
-	margin: 20px;
-	padding-bottom: 20px;
-	}
-
-legend {
-	color: #1A87BB;
-	text-align: center;
-	width: 100%;
-	text-shadow: 1px 1px white;
-	display: block;
-	text-transform: uppercase;
-	font-size: 15px;
-	}
-
-label {
-	color: #666666;
-	text-shadow: 1px 1px white;
-	font-size: 20px;
-	display: block;
-	font-weight: 200;
-	width: 300px;
-	margin: 10px 20px 5px;
-	}
-
-input {
-	background: white url(img/input_bg.gif) repeat-x left top;
-	border: 1px solid #CCCCCC;
-	padding: 4px;
-	height: 14px;
-	margin: 0 20px;
-	display: block;
-	width: 300px;
-	color: #666666;
-	}
-
-textarea {
-	width: 300px;
-	float: left;
-	color: #666666;
-	background: white url(img/input_bg.gif) repeat-x left top;
-	border: 1px solid #CCCCCC;
-	padding: 4px;
-	resize: vertical;
-	}
-
-input[type="checkbox"] {
-	width: auto;
-	margin-left: 0;
-	margin-right: 0;
-	}
-
-input[type="submit"] {
-	background: url(img/button_bg.png) no-repeat left top;
-	width: 131px;
-	height: 31px;
-	color: white;
-	text-shadow: -1px -1px #125A80;
-	font-weight: normal;
-	font-size: 15px;
-	text-align: center;
-	border: none;
-	cursor: pointer;
-	margin: 0 auto 20px auto;
-	}
-
-button {
-	float: left;
-	display: block;
-	border: none;
-	cursor: pointer;
-	}
-
 hr {
 	border: none;
 	background: url(img/hr.png) repeat-x;
@@ -109,14 +26,13 @@ hr {
 	clear: both;
 	}
 
-.export {
-	margin: 5px 0 8px 8px;
+.button {
+	margin: 5px 20px 8px 15px;
 	float: left;
 	}
 	
-.export a {
+.button a {
 	display: block;
-	background: url(img/export_button.png) no-repeat left top;
 	padding-top: 6px;
 	height: 25px;
 	padding-left: 35px;
@@ -124,6 +40,10 @@ hr {
 	text-shadow: 1px 1px white;
 	text-decoration: none;
 	}
+
+.button.export { background: url(img/export_button.png) no-repeat left top; }
+.button.add { background: url(img/add_button.png) no-repeat left top; }
+
 
 ul.tooltip_menu {
 	font-size: 13px;
@@ -163,6 +83,22 @@ h1 {
 	font-weight: 200;
 	text-shadow: 1px 1px white;
 	margin: 20px 20px 10px;
+	}
+
+h2 {
+	font-size: 25px;
+	color: #333;
+	font-weight: 200;
+	text-shadow: 1px 1px white;
+	margin: 20px 20px 5px;
+	}
+
+blockquote {
+	font-size: 12px;
+	color: #666;
+	text-shadow: 1px 1px white;
+	margin: 0 0 20px 20px;
+	font-style: italic;
 	}
 
 /*****************/
